# ronin

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GITHUB_ACTIONS_IP_SOLUTIONS.md  LICENSE  Makefile  README.md  config.yaml  main.py  profile.example.yaml  pyproject.toml  requirements.txt  spec.md  test_slack_notification.py  user.md
.cursor/: mcp.json
.cursor/rules/: airflow.mdc  always-read-this.mdc  commits.mdc  dbt.mdc  documentation-standards.mdc  documentation.mdc  git-operations.mdc  grep.mdc  javascript.mdc  linting.mdc  precommit.mdc  pull-request.mdc  pull-requests.mdc  python.mdc  secure-dev-python.mdc  user.mdc
.github/scripts/: deploy_telegram_ecs.sh
.github/workflows/: blog_post_generator.yml  ci.yml  deploy_telegram_bot.yml  job_scraper.yml
assets/: cover_letter_example.txt  highlights.txt  philosophy.txt  resume.txt
assets/cv/: aws.txt  azure.txt  b.txt  c.txt  mix.txt
configs/: __init__.py  config.yaml
core/: __init__.py  config.py  logging.py
dags/: blog_generator_dag.py  consulate-check.py  job_application_dag.py  job_outreach_dag.py  job_search_dag.py
data/: actualized_books.json
docs/: ARCHITECTURE_DIAGRAM.md  CLEANUP_COMPLETE.md  FINAL_CLEANUP_COMPLETE.md  MIGRATION_GUIDE.md  README.md  TRANSFORMATION_COMPLETE.md  ideas.md
flows/centrelink/: centrelink_job_application.py
models/: __init__.py  blog_post.py  job.py
ronin/: __init__.py  ai.py  application_queue.py  backup.py  config.py  db.py  db_postgres.py  profile.py  resume_variants.py  scheduler.py  spool_sync.py  worker.py
ronin/analyzer/: __init__.py  analyzer.py  archetype_classifier.py
ronin/applier/: __init__.py  ai_handler.py  applier.py  base.py  browser.py  camofox.py  cover_letter.py  form_applier.py  forms.py  html_formatter.py  validation.py
ronin/cli/: __init__.py  apply.py  apply_ops.py  config_cmd.py  db_cmd.py  feedback.py  main.py  profile_ops.py  run.py  search.py  setup.py  status.py  telegram_ops.py
ronin/feedback/: __init__.py  analysis.py  drift.py  gmail_api_tracker.py  gmail_tracker.py  phone_intake.py
ronin/prompts/: __init__.py  cover_letter.py  form_fields.py  generator.py  job_analysis.py
ronin/scraper/: __init__.py  base.py  seek.py
ronin/seek/: __init__.py  profile_updater.py
scripts/: clean.sh  cron_search.sh  delete_test_posts.sh  migrate.py  run_blog_generator.sh  run_centrelink_job_application.sh  run_job_application.sh  run_job_outreach.sh  run_job_search.sh  setup_self_hosted_runner.sh
scripts/local/: blog_generate.py  book_scrape.py  job_apply.py  (+1 more)
services/: __init__.py  ai_service.py  airtable_service.py  github_service.py  mataroa_service.py  notification_service.py  outreach_generator.py  recruiter_service.py
tasks/: __init__.py
tests/: publishing_stats.json  test_archetype_classifier.py  test_camofox_ecs.py  test_gmail_matching.py  test_telegram_ops.py
utils/: formatters.py  validators.py
(+86 files in other folders)
